<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctionChooseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_function"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorBase"
        android:gravity="center"
        android:minHeight="80dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/function_choose"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/tone_choose"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/toolbar_function"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/function_choose_tone"
        android:background="@drawable/ic_funchoose_button"/>

    <Button
        android:id="@+id/emg_choose"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ic_funchoose_button"
        android:text="@string/function_choose_emg"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>